# slimpletic-jax

./: .gitignore  ARCH_CONSIDERATIONS.md  Damped_Oscillator_SlimplecticGGLvsRK.ipynb  MMVP test.py  MMVP.py  MVP_Data_Creation.py  README.md  Simple_NN_Jax.py  aeng.py  aftc.ipynb  aftc_stash.ipynb  comparison_point.py  discretise.py  dj.py  ggl.ipynb  ggl.py  harness.py  jax_playground.py  newbuck.ipynb  original_solver.py  pyproject.toml  scipy-solve-jax.py  script.sh  sd.py  sgf.py  slimplectic.py  ss.py  t1.py  t2.py  t3.py  testing_derivatives.ipynb  vector_index_derivative.py
aengus/: HyperParams.pkl  MMVP.py  MVP_Data_Creation_Josh.py  Model_Training.py  dataCreation.py  dataTesting.py  flax_josh.py  hyperParamGeneration.py  lossOutput.csv  test_MMVP.py  tf_LSTM_NeuralNetwork.py  xData_1.npy  yData_1.npy  yData_lowNoise.npy
discretise/: __init__.py  disc_dev_tb.ipynb  fn_3.py  t2.ipynb  tc_2.py  test.py
example_notebooks/: Damped_Oscillator_SlimplecticGGLvsRK.ipynb  PostNewtonian_Inspiral_with_RK.ipynb  Poynting-Robertson_Cartesian-Long.ipynb  high_n_springs.py
figures/: FigurePlot2.py  __init__.py  dho_e_err.py  dho_e_err_2.py  dho_n_runtime.py  dho_n_runtime_graph.py  dho_r_runtime.py  double_damped_pendulum.py  lf_convergence.py  loss_fn_behaviour.py  orbit_util.py  original_dho_n_runtime.py  prcl_e_err.py  prd.py  rk.py
flax_nn/: __init__.py
form_eoms/: abs_aen.ipynb  diff.ipynb  form_and_solve.py  graph_that_shit.ipynb  tx.py
ggl/: __init__.py  ggl-data-original.json  helpers.py  test.py
loss_fn/: __init__.py  families.py  generate.py  graph_helpers.py  loss_fns.ipynb  loss_fns.py  normalise.py  render.py  systems.json  utils.py  work.py
neural_networks/: alpha.py  beta.py  flax_nn.py  keras_jax.py  x.py  (+12 more)
(+584 files in other folders)
