[tool.poetry]
name = "slimpletic-jax"
version = "0.1.0"
description = ""
authors = ["cm2435 <cm2435@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.4"
jax = "^0.4.23"
matplotlib = "^3.8.2"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
