[tool.poetry]
name = "slimplectic-jax"
version = "0.1.0"
description = ""
authors = ["Joshua Coles <josh@coles.to>"]
readme = "README.md"
packages = [{ include = "slimplectic_jax" }]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
jax = "^0.4.18"
jaxopt = "^0.8.0"
jupyter = "^1.0.0"
sympy = "^1.12"
pytest = "^7.4.3"
altair = "^5.2.0"
matplotlib = "^3.8.2"
pydantic = "^2.6.1"
mpld3 = "^0.5.10"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
